deps/src/cmake-3.13.4/Tests/RunCMake/Syntax/CMP0053-NameWithSpaces-stderr.txt
^CMake Error at CMP0053-NameWithSpaces.cmake:2 \(message\):
  Syntax error in cmake code at

    .*/Tests/RunCMake/Syntax/CMP0053-NameWithSpaces.cmake:2

  when parsing string

    \${var

  There is an unterminated variable reference.
Call Stack \(most recent call first\):
  CMakeLists.txt:3 \(include\)$
